<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Redmine</string>
    <string name="action_settings">Settings</string>
    <string name="serverTextView">"サーバURL :"</string>
    <string name="login_user_viewtext">"ログイン    :"</string>
    <string name="login_password_viewtext">"パスワード:"</string>
    <string name="login_server_hint">"http://"</string>
    <string name="login_user_hint">"ログイン名を入力してください"</string>
    <string name="login_password_hint">"パスワードを入力してください"</string>
    <string name="ticketListButton_text">チケット一覧</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="ticket_detail_title_text">チケット詳細</string>
    <string name="title_main">メイン</string>
    <string name="update">更新</string>
    <string name="title_activity_ticket_detail">TicketDetailActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="version_label">アプリケーションバージョン:</string>
    <string name="title_activity_about_application">AboutApplicationActivity</string>

</resources>
